refactor(dictionary-service): streamline parsing logic and clean up redundant code